# my-rust-journey

./: .gitignore  Cargo.toml  LiteCrypt-icon.rc  README.md  build.rs  icon.rc  lotid-icon.rc
.github/workflows/: rust.yml
.opencode/skills/my-rust-journey/: PROJECT_INDEX.md  SKILL.md
Setting/: 化学发光条码信息.csv
assets/: abbott_projects.json
docs/: 使用slint创建UI程序.md  软件设计.md
examples/: Loop.rs  calculator.rs  fibonacci.rs  for.rs  functions.rs  guess_number.rs  hello.rs  input.rs  match.rs  struct.rs  variables.rs  while.rs  zxing.rs
src/: abbott.rs  barcode.rs  config.rs  lib.rs  main.rs
src/AbbottBarcodeGeneration/: abbott.rs  barcode.rs  config.rs  main.rs
src/LiteCrypt/: crypto.rs  excel.rs  main.rs
src/LotID-Codec/: callbacks.rs  codec.rs  imaging.rs  main.rs
src/rl_clia/: app.rs  barcode.rs  config.rs  encryptor.rs  main.rs
ui/: barcode.slint  dialog.slint  litecrypt.slint  lotid.slint  main.slint  rl-clia.slint
