[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <Mq-b@qq.com>"]
description = "A Rust learning project with multiple examples"

[package.metadata.windows_subsystem]
windows = "windows"
# 项目可以是 library 或 binary，这里配置为 library 更适合学习和示例
[lib]
name = "rust_learning"
path = "src/lib.rs"

# 主程序入口
[[bin]]
name = "rust-learning"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
zxing-cpp = { version = "0.5.0", features = ["bundled", "image"] }
image = "0.25"
show-image = "0.14"
slint = "1.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
png = "0.18.1"
rfd = "0.17.0"
chrono = "0.4.44"

[build-dependencies]
embed-resource = "1.0.0"
slint-build = "1.15.0"

[profile.dev.package.zxing-cpp]
opt-level = 3
